feat: implement auto rules versioning
