# blueprints/credit_score_rules/routes.py
@@ -5,7 +5,8 @@ from utils.config import S3
 from helpers.error_helpers import handle_error
 from helpers.s3_helpers.get_file_content import get_file_content_from_key
 from helpers.s3_helpers.upload_file_helper import upload_file_to_s3
-
+from datetime import datetime
+from ..credit_score_rules.rules_service import update_default_rules_logic
 # Load environment variables from .env.development
 load_dotenv('.env.development')
 
@@ -14,6 +15,7 @@ S3_API_URL = S3["url"]
 S3_FOLDER_NAME = S3["folder_name"]
 RULES_SUBFOLDER_NAME = S3["rules_subfolder_name"]
 DEFAULT_RULES_FILENAME = S3["default_rules_filename"]
+LATEST_RULES_FILENAME = S3["latest_rules_filename"]
 
 @credit_score_rules_bp.route('/fetch', methods=['GET'])
 def get_credit_score_rules():
@@ -40,15 +42,9 @@ def update_default_rules():
     try:
         # Get the new rules file from the request
         new_default_rules_file = request.json.get('rules_file')
+        updated_rules = update_default_rules_logic(new_default_rules_file)
 
-        if not new_default_rules_file:
-            return handle_error('New default rules file is required', 400)
-
-        data = {"default_rules":new_default_rules_file}
-        upload_file_to_s3(DEFAULT_RULES_FILENAME,S3_FOLDER_NAME,RULES_SUBFOLDER_NAME,data,True)
-        default_rules_file_content = get_file_content_from_key(DEFAULT_RULES_FILENAME,S3_FOLDER_NAME,RULES_SUBFOLDER_NAME)
-
-        return jsonify({'message': 'Default rules file updated', 'new_default_rules_file': default_rules_file_content["default_rules"]}), 200
+        return jsonify({'message': 'Default rules file updated', 'new_default_rules_file': updated_rules}), 200
 
     except Exception as e:
         return handle_error(f"Error updating default rules: {str(e)}", 500)
@@ -57,14 +53,37 @@ def update_default_rules():
 @credit_score_rules_bp.route('/upload', methods=['POST'])
 def upload_rules():
     try:
-        data = request.json.get('data')
-        filename = request.json.get('filename')
-        if not data:
-            return handle_error('Data for rules file is required', 400)
-        if not filename:
-            return handle_error('New rules filename is required', 400)
+        rules = request.json.get('rules')
+        description = request.json.get('description','')
+        set_default = request.json.get('set_default', False)
+        current_time = datetime.now()
+        formatted_time = current_time.strftime('%Y-%m-%d %H:%M:%S')
 
-        key = upload_file_to_s3(filename,S3_FOLDER_NAME,RULES_SUBFOLDER_NAME,data,True)
+        if not rules:
+            return handle_error('Data for rules file is required', 400)
+
+        # Prepare rules file content
+        rules_content = {'timestamp': formatted_time,
+                         'description':description,
+                         'rules':rules}
+
+        # Get latest rules version
+        latest_version = get_file_content_from_key(LATEST_RULES_FILENAME,S3_FOLDER_NAME,RULES_SUBFOLDER_NAME)["latest_version"]
+
+        # Increment version number for new filename
+        current_version = latest_version + 1
+        filename = f"rules_v{current_version}.json"
+
+        # Upload new rules version file
+        key = upload_file_to_s3(filename,S3_FOLDER_NAME,RULES_SUBFOLDER_NAME,rules_content,True)
+        latest_version_data = {"latest_version":current_version}
+
+        if set_default:
+            update_default_rules_logic(filename)  # Call the logic to update default rules
+
+        # Upload latest version number for tracking
+        upload_file_to_s3(LATEST_RULES_FILENAME,S3_FOLDER_NAME,RULES_SUBFOLDER_NAME,latest_version_data,True)
+
         return jsonify({'message':'Rules file uploaded','key':key["key"]}), 200
     except Exception as e:
         return handle_error(f"Error uploading rules file: {str(e)}", 500)
